--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  get: ^4.7.3
   dio: ^5.9.1
+  flutter_bloc: ^9.1.1
+  bloc: ^9.2.0
+  equatable: ^2.0.8
+  get_it: ^9.2.0
 
 dev_dependencies:
   flutter_test:
